# PROJECT-STMAE-2023

./: .gitignore  CMakeLists.txt  README.md  model.json
Neural Plugin/: Neural Plugin.jucer
Neural Plugin/Builds/VisualStudio2022/: Neural Plugin.sln  Neural Plugin_SharedCode.vcxproj  Neural Plugin_SharedCode.vcxproj.filters  Neural Plugin_StandalonePlugin.vcxproj  Neural Plugin_VST3.vcxproj  resources.rc
Neural Plugin/JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
Neural Plugin/Source/: PluginEditor.cpp  PluginProcessor.cpp  PluginProcessor.h
NeuralPlugin/: NeuralPlugin.jucer
NeuralPlugin/Builds/VisualStudio2022/: NeuralPlugin.sln  NeuralPlugin_SharedCode.vcxproj  NeuralPlugin_SharedCode.vcxproj.filters  NeuralPlugin_StandalonePlugin.vcxproj  NeuralPlugin_StandalonePlugin.vcxproj.filters  NeuralPlugin_VST3.vcxproj  NeuralPlugin_VST3.vcxproj.filters  resources.rc
NeuralPlugin/JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
NeuralPlugin/Source/: CustomKnob.cpp  CustomKnob.h  Library.cpp  Library.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
runs/Jun28_10-42-32_LAPTOP-FI9BU007/: events.out.tfevents.1687941752.LAPTOP-FI9BU007.17112.0
train_lstm/: neural_net_weights.json  prove1.json  requirements.txt
train_lstm/data/: convert_data.py  spectogram.py
train_lstm/data/archive/: big_muff.csv
train_lstm/data/archive/test/test_input/: guitar.wav.reapeaks
train_lstm/data/my_processed_audio/input/: clean_signal.wav.reapeaks
train_lstm/neural_network/: train.py
train_lstm/nn_tensorflow/: Loss.py  Model.py  MyDataLoader.py  Save.py  data.py  evaluate.py  model.py  save_model.py  train.py  utils_training.py
train_lstm/src/: main.cpp
